--- a/index.html
+++ b/index.html
@@ -27,6 +27,39 @@
                     srcset="images\Vika.png"
                     src="images\Vika.png" 
                     alt="error">
+            </div>            
+        </div>
+        <div class="title2_wrapper">
+            <h2 class="title2">и хотим разделить этот <br> момент с тобой </h2>
+        </div>
+        <div class="date_wrapper">
+            <div class="calendar">
+                <img 
+                    srcset="images\date.png"
+                    src="images\date.png" 
+                    alt="error">
+            </div>
+            <p class="date">27.09.2025</p>
+        </div>
+        <div class="time_wrapper">
+            <div class="marriage_zags">
+                <div class="marriage_zags_time">
+                    <img class="icon_loc" 
+                        srcset="images\location.png"
+                        src="images\location.png" 
+                        alt="error">
+                    <p class="date">11:30</p>
+                </div>
+                <div class="marriage_loc newpadding">
+                    <p>ЗАГС г.Калуги, <br> пер. Старичков, 2/1</p>
+                </div>
+            </div>
+            <div class="vl"></div>
+            <div class="marriage_banquet">
+                <p class="date">14:30</p>
+                <div class="marriage_loc">
+                    <p>Эко-клуб <br> «Голицыно»</p>
+                </div>
             </div>
         </div>
     </main>     
