--- a/index.html
+++ b/index.html
@@ -56,10 +56,57 @@
             </div>
             <div class="vl"></div>
             <div class="marriage_banquet">
-                <p class="date">14:30</p>
+                <p class="date">16:30</p>
                 <div class="marriage_loc">
                     <p>Эко-клуб <br> «Голицыно»</p>
                 </div>
+            </div>
+        </div>
+        <div class="FAQ_wrapper">
+            <div class="FAQ_chapter">
+                <div class="FAQ_chapter_title">
+                    <h2>Что дарить?</h2>
+                </div>
+                <div class="FAQ_chapter_text">
+                    <p>мы любим купюры в конвертах! а вот сервизы, бытовую технику и прочие «традиционные» подарки нам будет некуда складывать</p>
+                </div>
+            </div>
+            <div class="FAQ_chapter">
+                <div class="FAQ_chapter_title">
+                    <h2>А цветы?</h2>
+                </div>
+                <div class="FAQ_chapter_text">
+                    <p>после свадьбы мы уедем и не сможем за ними ухаживать :( лучше подарить подписку
+                        на цветы — тогда свежие букеты будут создавать праздник даже после торжества</p>
+                </div>
+            </div>
+            <div class="FAQ_chapter">
+                <div class="FAQ_chapter_title">
+                    <h2>В чем приходить?</h2>
+                </div>
+                <div class="FAQ_chapter_text">
+                    <p>мы тщательно продумываем каждую деталь праздника, поэтому очень просим тебя соблюсти дресс-код и нарядиться в</p>
+                </div>
+            </div>
+        </div>
+        <div class="PS_info">
+            <div class="FAQ_chapter">
+                <div class="FAQ_chapter_title">
+                    <h2>Что-то ещё?</h2>
+                </div>
+                <div class="FAQ_chapter_text">
+                    <p>финишная прямая — теперь тебе нужно
+                        <span class="text_link"> Заполнить анкету</span> нашего дорогого гостя</p>
+                </div>
+            </div>
+            <div class="FAQ_chapter_text">
+                <p><span class="text_link">вот тут</span> собрали референсы цветовой гаммы</p>
+            </div>
+            <div class="FAQ_chapter_text">
+                <p>От всего сердца просим вас отказаться от криков «горько», чтобы сохранить атмосферу уютного праздника</p>
+            </div>
+            <div class="FAQ_chapter_text">
+                <p>Перед свадьбой мы создадим чаты в тг, в которых расскажем все-все-все подробности</p>
             </div>
         </div>
     </main>     
