--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
             </div>
         </div>
-        <div class="PS_info">
+       <div class="PS_info">  <!-- zarabotai -->
             <div class="FAQ_chapter">
                 <div class="FAQ_chapter_title">
                     <h2>Что-то ещё?</h2>
