--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <p class="date">11:30</p>
                 </div>
                 <div class="marriage_loc newpadding">
-                    <p>ЗАГС г.Калуги, <br> пер. Старичков, 2/1</p>
+                    <p>ЗАГС г.Калуги, пер. <br> Старичков, 2/1</p>
                 </div>
             </div>
             <div class="vl"></div>
@@ -68,7 +68,7 @@
                     <h2>Что дарить?</h2>
                 </div>
                 <div class="FAQ_chapter_text">
-                    <p>мы любим купюры в конвертах! а вот сервизы, бытовую технику и прочие «традиционные» подарки нам будет некуда складывать</p>
+                    <p>мы любим купюры в конвертах! <br> а вот сервизы, бытовую технику и прочие «традиционные» подарки нам будет некуда складывать</p>
                 </div>
             </div>
             <div class="FAQ_chapter">
@@ -76,8 +76,7 @@
                     <h2>А цветы?</h2>
                 </div>
                 <div class="FAQ_chapter_text">
-                    <p>после свадьбы мы уедем и не сможем за ними ухаживать :( лучше подарить подписку
-                        на цветы — тогда свежие букеты будут создавать праздник даже после торжества</p>
+                    <p>после свадьбы мы уедем и не сможем за ними ухаживать :( Но есть решение! мы договорились с цветочным магазином о подписке, ты можешь внести по этой <span class="text_link">ссылке</span> комфортную сумму, а мы будем радоваться свежим букетам после торжества</p>
                 </div>
             </div>
             <div class="FAQ_chapter">
@@ -85,28 +84,34 @@
                     <h2>В чем приходить?</h2>
                 </div>
                 <div class="FAQ_chapter_text">
-                    <p>мы тщательно продумываем каждую деталь праздника, поэтому очень просим тебя соблюсти дресс-код и нарядиться в</p>
+                    <p>мы тщательно продумываем каждую деталь праздника, поэтому очень просим тебя соблюсти дресс-код и нарядиться в эти цвета:</p>
                 </div>
             </div>
         </div>
-       <div class="PS_info">  
+       <div class="PS_info">
+            <div class="stars">
+                <img 
+                    srcset="images\stars.png"
+                    src="images\stars.png" 
+                    alt="error">
+            </div>            
+            <div class="FAQ_chapter_text">
+                <p> Если нужно вдохновение, по этой<span class="text_link">ссылке</span> можно найти референсы </p>
+            </div>
+            <div class="FAQ_chapter_text">
+                <p>От всего сердца просим вас отказаться от криков «горько», чтобы сохранить атмосферу уютного праздника</p>
+            </div>
+            <div class="FAQ_chapter_text">
+                <p>Перед свадьбой мы создадим чаты в Телеграме, в которых расскажем все-все-все подробности</p>
+            </div>
             <div class="FAQ_chapter">
                 <div class="FAQ_chapter_title">
                     <h2>Что-то ещё?</h2>
                 </div>
                 <div class="FAQ_chapter_text">
                     <p>финишная прямая — теперь тебе нужно
-                        <span class="text_link"> Заполнить анкету</span> нашего дорогого гостя</p>
+                       <a href="https://docs.google.com/forms/d/e/1FAIpQLSd4Lg0odjB96xIqFeLOST2FGnpAh43yAsiBK_Hp9QGNN9lmWA/viewform?usp=header"><span class="text_link"> Заполнить анкету</span></a> нашего дорогого гостя</p>
                 </div>
-            </div>
-            <div class="FAQ_chapter_text">
-                <p><span class="text_link">вот тут</span> собрали референсы цветовой гаммы</p>
-            </div>
-            <div class="FAQ_chapter_text">
-                <p>От всего сердца просим вас отказаться от криков «горько», чтобы сохранить атмосферу уютного праздника</p>
-            </div>
-            <div class="FAQ_chapter_text">
-                <p>Перед свадьбой мы создадим чаты в тг, в которых расскажем все-все-все подробности</p>
             </div>
         </div>
     </main>     
