--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
 </head>
 <body>
     <main>
-        <div class="title1_wrapper">
+        <div class="alttop">
+            <img 
+            srcset="images\top.png"
+            src="images\top.png" 
+            alt="error">
+        </div>
+        <!--<div class="title1_wrapper">            
             <h1 class="title1">мы <br> женимся!</h1>
         </div>
-        <div class="image_wrapper">
+         <div class="image_wrapper">
             <div class="image_me">
                 <img 
                     srcset="images\Vlad.png"
@@ -27,7 +33,7 @@
                     srcset="images\Vika.png"
                     src="images\Vika.png" 
                     alt="error">
-            </div>            
+            </div>             -->
         </div>
         <div class="title2_wrapper">
             <h2 class="title2">и хотим разделить этот <br> момент с тобой </h2>
@@ -76,7 +82,7 @@
                     <h2>А цветы?</h2>
                 </div>
                 <div class="FAQ_chapter_text">
-                    <p>после свадьбы мы уедем и не сможем за ними ухаживать :( Но есть решение! мы договорились с цветочным магазином о подписке, ты можешь внести по этой <span class="text_link">ссылке</span> комфортную сумму, а мы будем радоваться свежим букетам после торжества</p>
+                    <p>после свадьбы мы уедем и не сможем за ними ухаживать :( Но есть решение! мы договорились с цветочным магазином о подписке, ты можешь внести по этой <a href="https://letoflowers.ru/catalog/svadebnaya-podpiska-v-podarok-dlya-viktorii-i-vladislava/"><span class="text_link">ссылке</span></a> комфортную сумму, а мы будем радоваться свежим букетам после торжества</p>
                 </div>
             </div>
             <div class="FAQ_chapter">
@@ -96,7 +102,7 @@
                     alt="error">
             </div>            
             <div class="FAQ_chapter_text">
-                <p> Если нужно вдохновение, по этой<span class="text_link">ссылке</span> можно найти референсы </p>
+                <p> Если нужно вдохновение, по этой <a href="reference.html"><span class="text_link">ссылке</span></a> можно найти референсы </p>
             </div>
             <div class="FAQ_chapter_text">
                 <p>От всего сердца просим вас отказаться от криков «горько», чтобы сохранить атмосферу уютного праздника</p>
