--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <p> Если нужно вдохновение, по этой <a href="reference.html"><span class="text_link">ссылке</span></a> можно найти референсы </p>
             </div>
             <div class="FAQ_chapter_text">
-                <p>От всего сердца просим вас отказаться от криков «горько», чтобы сохранить атмосферу уютного праздника</p>
+                <p>От всего сердца просим тебя отказаться от криков «горько», чтобы сохранить атмосферу уютного праздника</p>
             </div>
             <div class="FAQ_chapter_text">
                 <p>Перед свадьбой мы создадим чаты в Телеграме, в которых расскажем все-все-все подробности</p>
