--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
             <div class="FAQ_chapter_text">
                 <p>Перед свадьбой мы создадим чаты в Телеграме, в которых расскажем все-все-все подробности</p>
             </div>
+            <div class="FAQ_chapter_text">
+                <p>если вы хотите организовать для нас какой-то сюрприз, ближе к дате мы дадим контакты ведущего и координатора</p>
+            </div>
             <div class="FAQ_chapter">
                 <div class="FAQ_chapter_title">
                     <h2>Что-то ещё?</h2>
